<resources>
    <string name="app_name">ProfileSpace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profiles">Profiles</string>
    <string name="level_label">"Level: "</string>
    <string name="age_label">"Age: "</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="manager">Manager</string>
    <string name="senior">Senior</string>
    <string name="mid_level">Mid-Level</string>
    <string name="junior">Junior</string>
    <string name="level">Level</string>
    <string name="country">Country</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="name">Name</string>
    <string name="first_and_last_name">first and last name</string>
    <string name="enter_job_title">enter job title</string>
    <string name="enter_age">age</string>
    <string name="select_location">location</string>
    <string name="country_2">country</string>
    <string name="such_empty">Such empty!</string>
</resources>