<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile_detail.ProfileDetailFragment"
    tools:ignore="ContentDescription">

    <View
        android:id="@+id/bgView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/curved_shape_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/curved_shape"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/deleteBtn"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            app:icon="@drawable/delete_ic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/general_sans_bold"
            android:text="@string/name"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameET"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/first_and_last_name"
                android:inputType="text"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/HeaderTextViewStyle"
            android:text="@string/job_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jobTitleLayout"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jobTitleET"
                style="@style/TextInputEditTextStyle"
                android:hint="@string/enter_job_title"
                android:inputType="text"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ageHeaderTV"
                style="@style/HeaderTextViewStyle"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/age" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_width="100dp"
                android:layout_below="@id/ageHeaderTV"
                android:layout_alignParentStart="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageET"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/enter_age"
                    android:inputType="number"
                    android:maxLength="3"
                    android:paddingVertical="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/countryHeaderTV"
                style="@style/HeaderTextViewStyle"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/ageLayout"
                android:text="@string/country" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/countryLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_below="@id/ageHeaderTV"
                android:layout_toEndOf="@id/ageLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/countryET"
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/country_2"
                    android:inputType="text"
                    android:paddingVertical="12dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <TextView
            style="@style/HeaderTextViewStyle"
            android:text="@string/level" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/levelChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:checkedChip="@id/juniorChip"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/juniorChip"
                style="@style/ChipStyle"
                android:text="@string/junior" />

            <com.google.android.material.chip.Chip
                android:id="@+id/midLevelChip"
                style="@style/ChipStyle"
                android:text="@string/mid_level" />

            <com.google.android.material.chip.Chip
                android:id="@+id/seniorChip"
                style="@style/ChipStyle"
                android:text="@string/senior" />

            <com.google.android.material.chip.Chip
                android:id="@+id/managerChip"
                style="@style/ChipStyle"
                android:text="@string/manager" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            style="@style/HeaderTextViewStyle"
            android:text="@string/gender" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genderChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:checkedChip="@id/maleChip"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/maleChip"
                style="@style/ChipStyle"
                android:text="@string/male" />

            <com.google.android.material.chip.Chip
                android:id="@+id/femaleChip"
                style="@style/ChipStyle"
                android:text="@string/female" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="14dp"
        app:cardUseCompatPadding="true"
        app:elevation="5dp"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/genderIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/male_avatar" />
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toggleFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/done_ic" />
</RelativeLayout>